fixed icon clipping and text centerring

--- a/client/src/styles/config/_util.scss
+++ b/client/src/styles/config/_util.scss
@@ -257,3 +257,7 @@ select:-webkit-autofill:focus {
     justify-content: center; align-items: center;
   }
 }
+
+#zoomIcon {
+  overflow: visible;
+}
