--- a/client/src/styles/layout/_nav.scss
+++ b/client/src/styles/layout/_nav.scss
@@ -37,8 +37,6 @@
 
     @media screen and (max-width: 1500px) {
       font-size: 1.6rem;
-
-
     }
 
     @media screen and (max-width: 560px) {
@@ -183,27 +181,36 @@
       font-size: 1.7rem;
       z-index: 20;
       color: whitesmoke;
-      background-color: #8e8e8e;
-      height: 3.3rem;
-      width: 3.3rem;
-      border-radius: 50%;
       text-align: center;
-      line-height: 3.3rem;
       transform: translate(60%, -45%);
-      @media screen and (max-width: 1500px) {
-        font-size: 1.2rem;
-        width: 2.35rem;
-        height: 2.35rem;
-        line-height: 2.35rem;
+
+      &::before {
+        content: '';
+        z-index: -1;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        border-radius: 50%;
+        width: 4rem; height: 4rem;
+        background-color: #8e8e8e;
       }
+
     }
 
     @media screen and (max-width: 1500px) {
-      width: 2.5rem;
+      width: 2.8rem;
+
+      &_count {
+        font-size: 1.5rem;
+        &::before {
+          width: 3rem; height: 3rem;
+        }
+      }
     }
 
     @media screen and (max-width: 560px) {
-      width: 2.2rem;
+      width: 2.5rem;
       right: 3.3rem;
     }
   }
