--- a/client/src/styles/layout/_wishlistcart.scss
+++ b/client/src/styles/layout/_wishlistcart.scss
@@ -247,7 +247,6 @@
             height: 0.23rem;
             transform: translateY(0) scaleX(1);
             transition: 0.25s all ease-out;
-            box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.2);
           }
 
           &:hover {
@@ -255,7 +254,6 @@
             &::before {
               height: 175%;
               transform: translateY(1rem) scaleX(1.5);
-              box-shadow: inset 0 0 1.3rem rgba(0, 0, 0, 0.5);
             }
             + svg {
               animation: repeatingYBounce 0.25s ease-in both alternate infinite;
